--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "npm": "^5"
   },
   "scripts": {
+    "start": "concurrently --kill-others \"npm start --prefix server\" \"npm start  --prefix client\"",
+    "lint": "npm run lint --prefix client && npm run lint --prefix server",
+    "test": "npm run test --prefix server",
+    "coverage": "npm run coverage --prefix server"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "concurrently": "^3.6.1"
   },
   "repository": {
     "type": "git",
