--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "npm": "^5"
   },
   "scripts": {
-    "start": "concurrently --kill-others \"npm start --prefix server\" \"npm start  --prefix client\"",
-    "lint": "npm run lint --prefix client && npm run lint --prefix server",
+    "postinstall": "npm run install --prefix server && npm run install --prefix client",
+    "start": "concurrently --kill-others \"npm start --prefix server\" \"npm run build  --prefix client\"",
+    "lint": "npm run lint --prefix server && npm run lint --prefix client",
     "test": "npm run test --prefix server",
+    "build": "npm run build --prefix client",
     "coverage": "npm run coverage --prefix server"
   },
   "dependencies": {},
@@ -25,6 +27,6 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/AlexanderMac/mean-starter/issues"
-  },
+   },
   "homepage": "https://github.com/AlexanderMac/mean-starter"
 }
