--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "npm": "^5"
   },
   "scripts": {
-    "postinstall": "npm run install --prefix server && npm run install --prefix client",
-    "start": "concurrently --kill-others \"npm start --prefix server\" \"npm run build  --prefix client\"",
-    "lint": "npm run lint --prefix server && npm run lint --prefix client",
-    "test": "npm run test --prefix server",
+    "postinstall": "npm install --prefix server && npm install --prefix client",
+    "update-all": "npm update && npm update --prefix server && npm update --prefix client",
+    "outdated-all": "(npm outdated || true) && (npm outdated --prefix server || true) && (npm outdated --prefix client || true)",
     "build": "npm run build --prefix client",
+    "start": "concurrently --kill-others \"npm start --prefix server\" \"npm run watch  --prefix client\"",
+    "lint": "npm run lint --prefix server && npm run lint --prefix client",
+    "test": "npm test --prefix server",
     "coverage": "npm run coverage --prefix server"
   },
   "dependencies": {},
   "devDependencies": {
-    "concurrently": "^3.6.1"
+    "concurrently": "^4.0.1"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,6 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/AlexanderMac/mean-starter/issues"
-   },
+  },
   "homepage": "https://github.com/AlexanderMac/mean-starter"
 }
