--- a/server/.gitignore
+++ b/server/.gitignore
@@ -16,6 +16,9 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
@@ -32,4 +35,4 @@ bower_components
 .DS_STORE
 
 # Generated files
-public
+public/assets
