fix travis config and test scripts

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "update-all": "npm update && npm update --prefix server && npm update --prefix client",
     "outdated-all": "(npm outdated || true) && (npm outdated --prefix server || true) && (npm outdated --prefix client || true)",
     "build": "npm run build --prefix client",
+    "build:production": "npm run build:production --prefix client",
     "start": "concurrently --kill-others \"npm start --prefix server\" \"npm run watch  --prefix client\"",
     "lint": "npm run lint --prefix server && npm run lint --prefix client",
     "test": "npm test --prefix server",
-    "coverage": "npm run coverage --prefix server"
+    "coverage": "npm run coverage --prefix server",
+    "codecov": "npm run codecov --prefix server"
   },
   "dependencies": {},
   "devDependencies": {
