--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
 
 script:
   - npm run lint
-  - cd ./client && npm run build:production
-  - cd ./server && nyc npm test && nyc report --reporter=text-lcov > ../coverage.lcov && codecov
+  - npm run build:production
+  - npm run codecov && codecov
 
 services:
   - mongodb
