--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,8 @@
     "@types/toastr": "^2.1.35",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
+    "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
