--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,6 +8,8 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5"
