--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-starter",
-  "version": "1.0.0",
-  "description": "angular-starter",
+  "name": "mean-starter",
+  "version": "1.1.0",
+  "description": "MEAN-starter",
   "private": true,
   "scripts": {
     "build": "webpack --config ./config/webpack/webpack.development",
@@ -63,12 +63,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/AlexanderMac/angular-starter"
+    "url": "https://github.com/AlexanderMac/mean-starter"
   },
   "author": "Alexander Mac",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AlexanderMac/angular-starter/issues"
+    "url": "https://github.com/AlexanderMac/mean-starter/issues"
   },
-  "homepage": "https://github.com/AlexanderMac/angular-starter"
+  "homepage": "https://github.com/AlexanderMac/mean-starter"
 }
