--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,32 @@
-# Temp files
+# Logs & temp
+logs
+*.log
 tmp
+.tmp
 .DS_STORE
-npm-debug.log
+todo
 
-# Coverage files
+# Runtime data
+pids
+*.pid
+*.seed
+
+# Coverage directory used by tools like istanbul
 coverage
 .nyc_output
 
-# Builds
+# Compiled
+build/Release
 public
 
 # Dependency directory
 node_modules
+
+# Users Environment Variables
+.lock-wscript
+.vscode
+.idea
+.brackets.json
+.jsbeautifyrc
+tsd.json
+typings
