--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,17 +1,21 @@
 {
   "compilerOptions": {
+    "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es2016", "dom"],
-    "module": "commonjs",
+    "lib": [
+      "es2020",
+      "dom"
+    ],
+    "module": "es2020",
     "moduleResolution": "node",
+    "target": "es2015",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
-    "target": "es5"
+    "sourceMap": true
   }
 }
