update gh actions

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "npm run lint --prefix server && npm run lint --prefix client",
     "test": "npm test --prefix server",
     "coverage": "npm run coverage --prefix server",
-    "codecov": "npm run codecov --prefix server"
+    "coverage-gh": "npm run coverage-gh --prefix server"
   },
   "devDependencies": {
     "concurrently": "^6.0.0"
