--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,24 +20,30 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - uses: pnpm/action-setup@v2.2.2
+        name: Install pnpm
+        with:
+          version: 7
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
       - name: Install Dependencies
-        run: npm install && npm install -g codecov
+        run: pnpm install && npm install -g codecov
 
       - name: Lint codebase
-        run: npm run lint
+        run: pnpm lint
 
       - name: Test codebase
-        run: npm test
+        run: pnpm test
 
       - name: Code coverage
-        run: npm run coverage-gh
+        run: pnpm coverage-gh
       
       - name: Upload coverage reports
         uses: codecov/codecov-action@v1
